Update W Games 隐私政策.html

--- a/W Games 隐私政策.html
+++ b/W Games 隐私政策.html
@@ -2,31 +2,35 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>W Games隐私政策</title>
+    <title>W Games</title>
 </head>
 <body>
 
 <header>
-    <h1>W Games隐私政策</h1>
+    <h1>Welcome to W Games</h1>
+    <!-- 这里可以放置其他网站主页内容 -->
 </header>
 
 <main>
+    <!-- 这里放置其他网站主页内容 -->
+
     <section>
-        <h2>信息收集与使用</h2>
+        <h2>隐私政策</h2>
+        <!-- 下面是你的隐私政策内容 -->
         <p>W Games尊重并保护用户的隐私。我们可能会收集您的个人信息以提供更好的服务。这些信息可能包括但不限于：</p>
         <ul>
             <li>注册信息：如电子邮件地址、用户名等。</li>
             <li>设备信息：如设备型号、操作系统版本等。</li>
             <li>游戏行为数据：如游戏进度、分数等。</li>
         </ul>
+        <!-- 其他隐私政策条款 -->
+        <p>如果您对我们的隐私政策有任何疑问或意见，请通过以下联系方式与我们联系：<a href="mailto:winboxsplus@gmail.com">winboxsplus@gmail.com</a></p>
     </section>
-
-    <!-- 根据你的隐私政策内容添加其他部分，比如信息用途、信息共享、信息安全、政策变更等 -->
 
 </main>
 
 <footer>
-    <p>如果您对我们的隐私政策有任何疑问或意见，请通过以下联系方式与我们联系：<a href="mailto:winboxsplus@gmail.com">winboxsplus@gmail.com</a></p>
+    <!-- 这里放置网站的页脚内容 -->
 </footer>
 
 </body>
